--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   tflite_flutter: ^0.10.1
-  image_picker: ^0.8.4+4
+  image_picker: ^1.0.2
   camera: ^0.10.5+2
   image: ^4.0.17
   # The following adds the Cupertino Icons font to your application.
