--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/model.tflite
+    - assets/rType.tflite
+    - assets/dType.tflite
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
