--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_picker: ^1.0.4
   camera: ^0.10.5+2
   image: ^4.0.17
+  shared_preferences: ^2.2.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -49,7 +50,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_launcher_icons: "^0.13.1"
-
+  shared_preferences: ^2.2.2
 
 
 
@@ -73,6 +74,7 @@ flutter:
     - assets/rType.tflite
     - assets/dType.tflite
     - assets/images/
+    - assets/data/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
