--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,9 @@ dependencies:
   camera: ^0.10.5+2
   image: ^4.0.17
   shared_preferences: ^2.2.2
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  image_gallery_saver: '^2.0.3'
   cupertino_icons: ^1.0.2
+  screenshot: ^2.1.0
 
 dev_dependencies:
   flutter_test:
